# simplestCMS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure  configure.ac  simplestCMS.conf
include/: Compositor.h  option.h
src/: Compositor.cpp  Makefile.am  main.cpp  option.cpp  simpleCMS  test.html
